tests/models/enum/named/i16/fail/min_items.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(min_items = 2)]
        i16
    ),
}
fn main() {}
